<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        tools:context=".presentation.ui.RecipeDetailsFragment">

        <ImageView
            android:id="@+id/dynamic_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:contentDescription="@string/recipe_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/stat_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipe_description"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="1dp"/>

        <LinearLayout
            android:id="@+id/stat_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dynamic_thumbnail">

            <androidx.cardview.widget.CardView
                android:id="@+id/recipe_serve_cardView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:background="@color/grey"
                android:elevation="10dp"
                android:padding="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <TextView
                        android:id="@+id/recipe_serves_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/serves" />

                    <TextView
                        android:id="@+id/recipe_serves_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/roboto_black"
                        android:textSize="18sp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/recipe_prep_cardView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:background="@color/grey"
                android:elevation="10dp"
                android:padding="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <TextView
                        android:id="@+id/recipe_prep_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/prep" />

                    <TextView
                        android:id="@+id/recipe_prep_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/roboto_black"
                        android:textSize="18sp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/recipe_cooking_cardView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:background="@color/grey"
                android:elevation="10dp"
                android:padding="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <TextView
                        android:id="@+id/recipe_cooking_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/cooking" />

                    <TextView
                        android:id="@+id/recipe_cooking_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/roboto_black"
                        android:textSize="18sp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_black"
            android:gravity="center_horizontal"
            android:textAppearance="?attr/textAppearanceHeadline4"
            app:layout_constraintBottom_toTopOf="@id/recipe_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintBottom_toTopOf="@id/dynamic_thumbnail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipe_title" />

        <TextView
            android:id="@+id/recipe_ingredient_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:fontFamily="@font/roboto_black"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:text="@string/ingredients"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stat_layout"
            app:layout_constraintBottom_toTopOf="@id/recipe_ingredients"/>

        <TextView
            android:id="@+id/recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/roboto"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipe_ingredient_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_recipe_to_favorites"
        android:focusable="true"
        app:tint="@color/primaryColor"
        app:srcCompat="@drawable/ic_baseline_favorite" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>